Fix newUser form which was not visible

--- a/src/app/pages/mypage/mypage.page.scss
+++ b/src/app/pages/mypage/mypage.page.scss
@@ -57,6 +57,7 @@ ion-note {
 
 form {
   ion-item {
+    --padding-bottom: -20px;
     ion-label {
       font-size: 21px;
       padding-bottom: 20px;
